minio/virtualservice.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtual-service
  namespace: minio
spec:
  hosts:
    - #@ "minio." + data.values.apps_domain
  gateways:
    - app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio
        port:
          number: 9000
